# lrzip-next

./: .gitignore  .gitmodules  AUTHORS  BUGS  ChangeLog  FEATURES  FIXME  Makefile.am  NEWS  OLDREADME.md  README-NOT-BACKWARD-COMPATIBLE  README.md  TODO  VERSION  WHATS-NEW  autogen.sh  configure.ac  description-pak  lrzip-next.pc.in  lrzip.c  lrzip_private.h  main.c  stream.c  util.c  util.h
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
LICENSES/: Makefile.am  README
LICENSES/lrzip-next/: GNU-GPL-2.0
LICENSES/lzma/: GNU-LGPL-2.0
LICENSES/rzip/: GNU-GPL-2.0
LICENSES/zpaq/: PUBLIC-DOMAIN
doc/: CURRENT_ENCMETHODS  CURRENT_HASHES  Makefile.am  README.NEW.BENCHMARK.ALGO.md  README.SDK19_COMPARISON.md  README.filters  README.zstd.strategies  lrzip.conf.example  magic.header.txt
libzpaq/: libzpaq.h
lzma/: Makefile.am  README  README.threading
lzma/ASM/: Makefile.am
lzma/ASM/ASMDecompress/: LzmaDecOpt.asm  README
lzma/ASM/x86/: 7zAsm.asm
lzma/C/: 7zCrcOpt.c  Makefile.am
lzma/include/: MtCoder.h
man/: Makefile.am  lrzip-next.1  lrzip-next.conf.5  lrzip.1  lrzip.conf.5  lrzn.1.pod  lrzncat.1  lrzncat.1.pod  lrzntar.1  lrzntar.1.pod  lrznuntar.1  lrznuntar.1.pod  lrznunzip.1  lrznunzip.1.pod
minilzo/: Makefile.am
src/: Makefile.am  liblrzip.c  lrzip-next  lrzip.c  lrzip_private.h  lrzntar  lrztar  main.c  runzip.c  rzip.c  stream.c  util.c
src/demo/: Makefile.am  liblrzip_demo.c
src/include/: lrzip_core.h  lrzip_private.h  runzip.h  rzip.h  stream.h  util.h
src/lib/libbz3/: Makefile.am  libbz3.c  libbz3.h
src/lib/libzpaq/: Makefile.am  libzpaq.cpp  libzpaq.h
src/lib/libzpaq/doc/: readme.txt
src/lib/minilzo/: Makefile.am
src/libdemo/: README  lrzip-next.pc
src/libzpaq/: Makefile.am
src/lzma/: Makefile.am
src/lzma/ASM/: Makefile.am
src/lzma/ASM/x86/: 7zAsm.asm  7zCrcOpt.asm  LzFindOpt.asm  LzmaDecOpt.asm
src/lzma/C/: 7zCrc.c  7zCrcOpt.c  Alloc.c  Bra.c  Bra86.c  BraIA64.c  CpuArch.c  Delta.c  LzFind.c  LzFindMt.c  LzFindOpt.c  LzmaDec.c  LzmaEnc.c  LzmaLib.c  Makefile.am  Threads.c
src/lzma/doc/: README  README.ASM  README.ASMDecompress  lzma-history.txt  lzma-sdk.txt
src/lzma/include/: 7zTypes.h  Precomp.h  Threads.h
test/: speedtest.sh
util/: gitdesc.sh
