MAINTAINERCLEANFILES = Makefile.in

licensesdocdir = @docdir@/LICENSES
licenseslrzdocdir = @docdir@/LICENSES/lrzip-next
licenseslzmadocdir = @docdir@/LICENSES/lzma
licensesrzipdocdir = @docdir@/LICENSES/rzip
licenseszpaqdocdir = @docdir@/LICENSES/zpaq

licensesdoc_DATA = \
	README

licenseslrzdoc_DATA = \
	lrzip-next/GNU-GPL-2.0

licenseslzmadoc_DATA = \
	lzma/GNU-LGPL-2.0

licensesrzipdoc_DATA  = \
	rzip/GNU-GPL-2.0

licenseszpaqdoc_DATA = \
	zpaq/PUBLIC-DOMAIN

EXTRA_DIST = $(licensesdoc_DATA) \
	     $(licenseslrzdoc_DATA) \
	     $(licenseslzmadoc_DATA) \
	     $(licensesrzipdoc_DATA) \
	     $(licenseszpaqdoc_DATA)
