MAINTAINERCLEANFILES = Makefile.in

dist_doc_DATA = \
	CURRENT_ENCMETHODS \
	CURRENT_HASHES \
	README.NEW.BENCHMARK.ALGO.md \
	README.Assembler \
	README.benchmarks \
	README.filters \
	README.lzo_compresses.test.txt \
	README.SDK19_COMPARISON.md \
	magic.header.txt \
	lrzip.conf.example

PACKAGE_DOCNAME = $(PACKAGE_TARNAME)-$(PACKAGE_VERSION)-doc
