MAINTAINERCLEANFILES = Makefile.in

## for readability
## debugger requires absolute paths to find sources in ASM
LZMA_BASEDIR = @abs_top_srcdir@/lzma

AM_CFLAGS = \
  -D_REENTRANT \
  -D_7ZIP_LARGE_PAGES \
  -I@top_builddir@ \
  -I@top_srcdir@ \
  -I$(LZMA_BASEDIR)/include

ASM_S =
ASM_H =
ASM_7z =
ASM_Lz =
C_S =
if USE_ASM
  ASM_7z += 7zCrcOpt_asm
  ASM_H  += $(LZMA_BASEDIR)/ASM/x86/7zAsm.asm
  ASM_S  += $(LZMA_BASEDIR)/ASM/ASMDecompress/$(ASM_7z).asm
  ASM_OPT += -I$(LZMA_BASEDIR)/ASM/x86/
  AM_CFLAGS += -D_7ZIP_ASM
if USE_X64
## For LZMA Assembler Decompressor
  ASM_Lz += LzmaDecOpt
  ASM_S  += $(LZMA_BASEDIR)/ASM/ASMDecompress/$(ASM_Lz).asm
  AM_CFLAGS += -D_LZMA_DEC_OPT
endif
else
  C_S += 7zCrcOpt.c
endif


noinst_LTLIBRARIES = liblzma.la
liblzma_la_SOURCES = \
	7zCrc.c 	$(LZMA_BASEDIR)/include/7zCrc.h \
	$(LZMA_BASEDIR)/include/7zTypes.h $(C_S) \
	Alloc.c 	$(LZMA_BASEDIR)/include/Alloc.h \
	Bra86.c		$(LZMA_BASEDIR)/include/Bra.h \
	Bra.c \
	BraIA64.c \
	$(LZMA_BASEDIR)/include/Compiler.h \
	$(LZMA_BASEDIR)/include/CpuArch.h \
	Delta.c		$(LZMA_BASEDIR)/include/Delta.h \
	LzFind.c 	$(LZMA_BASEDIR)/include/LzFind.h \
	LzFindMt.c 	$(LZMA_BASEDIR)/include/LzFindMt.h \
	$(LZMA_BASEDIR)/include/LzHash.h \
	LzmaDec.c 	$(LZMA_BASEDIR)/include/LzmaDec.h \
	LzmaEnc.c 	$(LZMA_BASEDIR)/include/LzmaEnc.h \
	LzmaLib.c 	$(LZMA_BASEDIR)/include/LzmaLib.h \
	Threads.c 	$(LZMA_BASEDIR)/include/Threads.h \
	$(ASM_S) 	$(ASM_H) \
	$(LZMA_BASEDIR)/include/precomp.h \
	$(LZMA_BASEDIR)/include/basetyps.h \
	$(LZMA_BASEDIR)/include/MyGuidDef.h \
	$(LZMA_BASEDIR)/include/MyWindowsDef.h \
	$(LZMA_BASEDIR)/include/windows.h

## hack to force asm compilation and to trick libtool with .lo file
if USE_ASM
liblzma_la_LIBADD = $(ASM_7z).lo

7ZIPASMLOFILE := \
\# $(ASM_7z).lo - a libtool object file\
\n\# Generated by libtool -- hack to allow asm linking\
\n\# Peter Hyman\
\npic_object='.libs/$(ASM_7z).o'\
\nnon_pic_object='$(ASM_7z).o'

$(ASM_7z).lo: $(LZMA_BASEDIR)/ASM/x86/$(ASM_7z).asm
	$(ASM_PROG) $(ASM_OPT) -o $(ASM_7z).o $(LZMA_BASEDIR)/ASM/x86/$(ASM_7z).asm
	@cp $(ASM_7z).o .libs/
	@echo -e "$(7ZIPASMLOFILE)" > $(ASM_7z).lo
if USE_X64
liblzma_la_LIBADD += $(ASM_Lz).lo

LzmaDecOptFILE := \
\# $(ASM_Lz).lo - a libtool object file\
\n\# Generated by libtool -- hack to allow asm linking\
\n\# Peter Hyman\
\npic_object='.libs/$(ASM_Lz).o'\
\nnon_pic_object='$(ASM_Lz).o'

$(ASM_Lz).lo: $(LZMA_BASEDIR)/ASM/ASMDecompress/$(ASM_Lz).asm
	$(ASM_PROG) $(ASM_OPT) -o $(ASM_Lz).o $(LZMA_BASEDIR)/ASM/ASMDecompress/$(ASM_Lz).asm
	@mkdir -p .libs
	@cp $(ASM_Lz).o .libs/
	@echo -e "$(LzmaDecOptFILE)" > $(ASM_Lz).lo
endif
endif
